# dis

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  build_and_run.py  client.py  config.yaml  debug.py  documentar.py  generate_large.py  generate_parse.py  main.cpp  orchestator.py  reproduction_test.py  requirements.txt  run_and_log.sh  run_benchmark.py  server_python.py  solver_comparison.hpp  web_app.py
client/: client_generator.py
doc/: CPL_RUN_09-11-2025--23-00-02.md  CPL_RUN_27-10-2025--00-45-09.md  DOC-04-12-2025--22-28.md  DOC-04-12-2025--22-29.md  DOC-04-12-2025--22-31.md  DOC-04-12-2025--22-37.md  DOC-04-12-2025--22-53.md  DOC-04-12-2025--22-57.md  DOC-04-12-2025--23-00.md  DOC-04-12-2025--23-04.md  DOC-04-12-2025--23-11.md  DOC-05-12-2025--00-06.md  DOC-05-12-2025--01-55.md  DOC-09-11-2025--22-59.md  DOC-13-12-2025--04-12.md  DOC-27-10-2025--00-45.md
include/: benchmark_runner.hpp  config.hpp  io_utils.hpp  reporting.hpp  solvers.hpp  types.hpp  utils.hpp
scripts/: build_and_run.py  combine_animations.py  documentar.py  generate_report.py  generate_report_html.py  generate_report_md.py  plot_convergence.py  visualize_iterations.py
server/: cpp_http_server.cpp  python_cgnr.py  python_server.py  test_cgnr.py
src/: benchmark_runner.cpp  config.cpp  io_utils.cpp  reporting.cpp  solvers.cpp  utils.cpp
templates/: index.html
